[gd_scene load_steps=13 format=3 uid="uid://fvfqlpc3ptnd"]

[ext_resource type="PackedScene" uid="uid://bdjxiqbu3dlx4" path="res://Assets/Player.tscn" id="1_r7xm3"]
[ext_resource type="Texture2D" uid="uid://cqrti61thn412" path="res://Assets/Images/Background.png" id="2_bg_img"]
[ext_resource type="AudioStream" uid="uid://yic3y65beqcw" path="res://Assets/Sounds/Hintergrundmusik.mp3" id="3_bx6iq"]
[ext_resource type="Script" path="res://Scripts/BackgroundScaler.gd" id="3_jbfpt"]
[ext_resource type="Texture2D" uid="uid://mplo83ptugb6" path="res://Assets/Images/Foreground.png" id="4_74cct"]
[ext_resource type="Script" path="res://Scripts/BubbleManager.gd" id="4_xm3pq"]
[ext_resource type="Script" path="res://Scripts/LevelManager.gd" id="5_new_script"]
[ext_resource type="Script" path="res://Scripts/TransitionEffect.gd" id="6_trans_fx"]
[ext_resource type="Script" path="res://Scripts/InputManager.gd" id="7_input_manager"]
[ext_resource type="AudioStream" uid="uid://cwfiwf7m6tmq6" path="res://Assets/Sounds/NXTLEVEL1_TETRIS.mp3" id="10_t0ris"]
[ext_resource type="AudioStream" uid="uid://ixph0ccmxm65" path="res://Assets/Sounds/NXTLEVEL2_SCHUMMAN.mp3" id="11_cgqnj"]
[ext_resource type="AudioStream" uid="uid://dwda37plpv2t1" path="res://Assets/Sounds/NXTLEVEL3_ASTLEY.mp3" id="12_8cfxu"]

[node name="Node2D" type="Node2D"]

[node name="LevelManager" type="Node" parent="."]
script = ExtResource("5_new_script")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="Sprite2D" parent="BackgroundLayer"]
position = Vector2(960, 540)
texture = ExtResource("2_bg_img")

[node name="BackgroundScaler" type="Node" parent="BackgroundLayer/Background"]
script = ExtResource("3_jbfpt")

[node name="ForegroundLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Foreground" type="Sprite2D" parent="ForegroundLayer"]
position = Vector2(960, 540)
texture = ExtResource("4_74cct")

[node name="BackgroundScaler" type="Node" parent="ForegroundLayer/Foreground"]
script = ExtResource("3_jbfpt")

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 3

[node name="BubbleLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="BubbleManager" type="Node2D" parent="BubbleLayer"]
script = ExtResource("4_xm3pq")

[node name="PlayerLayer" type="CanvasLayer" parent="."]

[node name="Player" parent="PlayerLayer" instance=ExtResource("1_r7xm3")]
position = Vector2(15.0001, 540)
scale = Vector2(1.5, 1.5)

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_bx6iq")
volume_db = 10.0
autoplay = true

[node name="TransitionEffect" type="ColorRect" parent="."]
z_index = 100
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)
script = ExtResource("6_trans_fx")

[node name="InputManager" type="Node" parent="."]
script = ExtResource("7_input_manager")

[node name="Melody_Lvl1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_t0ris")

[node name="Melody_Lvl2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_cgqnj")

[node name="Melody_Lvl3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_8cfxu")
